# Routes/Routes.go
@@ -9,13 +9,30 @@ import (
 // SetupRouter ... Configure routes
 func SetupRouter() *gin.Engine {
 	r := gin.Default()
-	note_service := r.Group("/note-api")
+	v1 := r.Group("/api/v1")
 	{
-		note_service.GET("note", Controllers.GetAllNotes)
-		note_service.POST("note", Controllers.CreateNote)
-		note_service.GET("note/:id", Controllers.GetNoteById)
-		note_service.PUT("note/:id", Controllers.UpdateNote)
-		note_service.DELETE("note/:id", Controllers.DeleteNote)
+		note_service := v1.Group("/note")
+		{
+			note_service.GET("", Controllers.GetAllNotes)
+			note_service.POST("", Controllers.CreateNote)
+			note_service.GET(":id", Controllers.GetNoteById)
+			note_service.PUT(":id", Controllers.UpdateNote)
+			note_service.DELETE(":id", Controllers.DeleteNote)
+		}
+
+		user_service := v1.Group("/user", authorizationMiddleware)
+		{
+			user_service.GET("", Controllers.GetAllUsers)
+			user_service.POST("", Controllers.CreateUser)
+			user_service.GET(":id", Controllers.GetUserById)
+			user_service.PUT(":id", Controllers.UpdateUser)
+			user_service.DELETE(":id", Controllers.DeleteUser)
+		}
+
+		auth_service := v1.Group("/auth")
+		{
+			auth_service.POST("login", Controllers.Login)
+		}
 	}
 	return r
 }
